Bug #57616
osd/scrub: on_replica_init() cannot be called twice
% Done:
0%
Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
on_replica_init() may be called twice for a specific scrub-chunk request from a replica.
But after 30facb0f2b, it stopped to be idempotent.
History
#1 Updated by Ronen Friedman 4 months ago
- Pull request ID set to 48190
#2 Updated by Ronen Friedman 4 months ago
- Status changed from New to Resolved