osd/scrub: make on_replica_init() idempotent again

on_replica_init() might be called twice during replica scrub
initiation. Thus, it was designed to cause no issue if called
an extra time. That was broken when the scrubber-backend code
was introduced.

Fixes: https://tracker.ceph.com/issues/57616
Signed-off-by: Ronen Friedman <rfriedma@redhat.com>